# MemorySystem

./: LICENSE  README.md  pyproject.toml
src/: InteractionManager.py  ModelGateway.py  SpeakerIdentification.py  VectorDatabase.py  __init__.py
src/MemorySystem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
